--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-body{
-  min-height: 100vh;
-  background: linear-gradient(180deg, #F5DB13 0%, #F2B807 100%);
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
