--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,25 @@
+@import '../../variables';
+
 .root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 88px;
+}
+.wrap {
   display: flex;
   align-items: center;
   justify-content: space-between;
   max-width: 1125px;
   width: 100%;
+  height: 22px;
+}
+.text {
+  font-family: Karla;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+
+  color: $dark;
 }
