--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,86 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); */
+@font-face {
+  font-family: 'Karla';
+  src: local('Karla'), url(./fonts/Karla-Regular.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  src: local('Lato'), url(./fonts/Karla-Italic.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Karla';
+  font-weight: 200;
+  src: local('Karla'), url(./fonts/Karla-ExtraLight.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Karla';
+  font-weight: 200;
+  font-style: italic;
+  src: local('Karla'), url(./fonts/Karla-ExtraLightItalic.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Karla';
+  font-weight: 300;
+  src: local('Karla'), url(./fonts/Karla-Light.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Karla';
+  font-weight: 300;
+  font-style: italic;
+  src: local('Karla'), url(./fonts/Karla-LightItalic.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Karla';
+  font-weight: 500;
+  src: local('Karla'), url(./fonts/Karla-Medium.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Karla';
+  font-weight: 500;
+  font-style: italic;
+  src: local('Karla'), url(./fonts/Karla-MediumItalic.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Karla';
+  font-weight: 600;
+  src: local('Karla'), url(./fonts/Karla-SemiBold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Karla';
+  font-weight: 600;
+  font-style: italic;
+  src: local('Karla'), url(./fonts/Karla-SemiBoldItalic.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Karla';
+  font-weight: 700;
+  src: local('Karla'), url(./fonts/Karla-Bold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Karla';
+  font-weight: 700;
+  font-style: italic;
+  src: local('Karla'), url(./fonts/Karla-BoldItalic.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Karla';
+  font-weight: 800;
+  src: local('Karla'), url(./fonts/Karla-ExtraBold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Karla';
+  font-weight: 800;
+  font-style: italic;
+  src: local('Karla'), url(./fonts/Karla-ExtraBoldItalic.ttf) format('truetype');
+}
+
 * {
   box-sizing: border-box;
 }
@@ -5,4 +88,8 @@ html,
 body {
   margin: 0;
   padding: 0;
+}
+body {
+  font-family: 'Karla', sans-serif;
+  overflow-x: hidden;
 }
