--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,12 +1,25 @@
 @import '../../variables';
 
 .root {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   background: linear-gradient(180deg, $third 0%, $primary 100%);
 }
-.content {
+.contentWrap {
   flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+  max-width: 1125px;
+  // overflow-x: hidden;
+}
+.contentText {
+  width: 100%;
+  height: inherit;
+  max-width: 515px;
+}
+.contentParallax {
+  width: 100%;
 }
