Add title on PokedexPage

--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -14,3 +14,17 @@
   max-width: 1125px;
   // overflow-x: hidden;
 }
+.title {
+  margin-top: 70px;
+  margin-bottom: 50px;
+  font-family: Karla;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 35px;
+  line-height: 41px;
+  /* identical to box height */
+  text-align: center;
+  letter-spacing: 3px;
+
+  color: #000000;
+}
