--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,12 +5,13 @@
   align-items: center;
   justify-content: center;
   height: 88px;
+  max-width: 1125px;
+  width: 100%;
 }
 .wrap {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1125px;
   width: 100%;
   height: 22px;
 }
