--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   min-height: 100vh;
   background: linear-gradient(180deg, $third 0%, $primary 100%);
+  align-items: center;
 }
 .contentWrap {
   flex: 1;
