--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  align-items: center;
+  justify-content: flex-start;
 }
 .contentWrap {
   margin: 0 auto;
@@ -9,22 +11,30 @@
   flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   width: 100%;
   max-width: 1125px;
   // overflow-x: hidden;
 }
 .title {
   margin-top: 70px;
+  margin-bottom: 35px;
+}
+.search {
+  padding: 17px 30px;
+  width: 100%;
+  height: 53px;
   margin-bottom: 50px;
-  font-family: Karla;
+  background: #f2f2f2;
+  box-shadow: 4px 4px 16px rgba(1, 28, 64, 0.2);
+  border-radius: 40px;
+  outline: 0;
+  border: 0;
+
+  font-family: Source Sans Pro;
   font-style: normal;
   font-weight: normal;
-  font-size: 35px;
-  line-height: 41px;
-  /* identical to box height */
-  text-align: center;
-  letter-spacing: 3px;
+  font-size: 16px;
+  line-height: 20px;
 
-  color: #000000;
+  color: rgba(33, 33, 33, 0.8);
 }
