--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .root {
   display: flex;
   flex-direction: column;
@@ -37,4 +39,9 @@
   line-height: 20px;
 
   color: rgba(33, 33, 33, 0.8);
+
+  &:active,
+  &:focus {
+    box-shadow: 0 0 3pt 2pt $third;
+  }
 }
