Style and Error fixes

--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,9 @@ body {
   font-family: 'Karla', sans-serif;
   overflow-x: hidden;
 }
+
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
