--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -3,7 +3,7 @@
 .root {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  flex: 1;
   background: linear-gradient(180deg, $third 0%, $primary 100%);
   align-items: center;
 }
