--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -3,7 +3,7 @@
 .root {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  flex: 1;
   align-items: center;
   justify-content: flex-start;
 }
