--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,5 @@
 @import '../../variables';
+@import '../../breakpoints';
 
 .root {
   display: flex;
@@ -17,9 +18,60 @@
   width: 100%;
   height: 63px;
 }
+.burgerBtn {
+  display: none;
+  cursor: pointer;
+
+  @include media('<=610px') {
+    display: block;
+  }
+}
 .logo {
-  width: 158px;
-  height: 63px;
+  .logoDekstop {
+    width: 158px;
+    height: 63px;
+  }
+  .logoTablet {
+    display: none;
+    width: 121px;
+    height: 45px;
+  }
+  .logoMobile {
+    display: none;
+    width: 59px;
+    height: 22px;
+  }
+
+  @include media('>tablet', '<desktop') {
+    .logoDekstop {
+      display: none;
+    }
+    .logoTablet {
+      display: block;
+    }
+  }
+  @include media('>phone', '<=tablet') {
+    .logoDekstop {
+      display: none;
+    }
+    .logoTablet {
+      display: block;
+    }
+    .logoMobile {
+      display: none;
+    }
+  }
+  @include media('<phone') {
+    .logoDekstop {
+      display: none;
+    }
+    .logoTablet {
+      display: none;
+    }
+    .logoMobile {
+      display: block;
+    }
+  }
 }
 .menu {
   display: flex;
@@ -27,6 +79,18 @@
   justify-content: space-between;
   max-width: 658px;
   width: 100%;
+
+  @include media('>tablet', '<desktop') {
+    max-width: 550px;
+  }
+  @include media('>phone', '<=tablet') {
+    max-width: 450px;
+  }
+
+  @include media('<=610px') {
+    display: none;
+    max-width: 628px;
+  }
 }
 .menuLink {
   color: $dark;
@@ -63,4 +127,67 @@
       opacity: 1;
     }
   }
+
+  @include media('>tablet', '<desktop') {
+    font-size: 19px;
+    line-height: 45px;
+  }
+  @include media('>phone', '<=tablet') {
+    font-size: 19px;
+    line-height: 45px;
+  }
+}
+
+.mobileMenuWrap {
+  position: absolute;
+  display: none;
+  overflow: hidden;
+  min-height: 100vh;
+  min-width: 100%;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  background: #21212180;
+
+  &.active {
+    display: block;
+  }
+}
+.mobileMenu {
+  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  height: 350px;
+  width: 100%;
+  background: linear-gradient(180deg, #f5db13 0%, #f2b807 100%);
+  box-shadow: 4px 4px 24px rgba(1, 17, 38, 0.2);
+  border-radius: 0px 0px 16px 16px;
+
+  .mobileMenuLogo {
+    margin-bottom: 36px;
+  }
+}
+.mobileMenuLink {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 27px;
+  line-height: 32px;
+  /* identical to box height */
+  text-align: center;
+
+  color: $dark;
+  text-decoration: none;
+
+  /* blur20 */
+  text-shadow: 4px 4px 20px rgba(1, 28, 64, 0.2);
+}
+.closeIcon {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  cursor: pointer;
 }
