--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -1,5 +1,8 @@
+@import '../../breakpoints';
+
 .root {
   color: #000;
+  margin: 0;
 }
 .h1 {
   font-family: Karla;
@@ -8,6 +11,11 @@
   font-size: 72px;
   line-height: 84px;
   letter-spacing: 4px;
+
+  @include media('>phone', '<=tablet') {
+    font-size: 42px;
+    line-height: 49px;
+  }
 }
 .h2 {
   font-family: Karla;
