--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -9,4 +9,7 @@
   @include media('>tablet', '<desktop') {
     padding: 0 20px;
   }
+  @include media('>phone', '<=tablet') {
+    padding: 0 20px;
+  }
 }
