--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,4 +1,5 @@
 @import '../../variables';
+@import '../../breakpoints';
 
 .root {
   display: flex;
@@ -14,12 +15,56 @@
   align-items: center;
   width: 100%;
   // overflow-x: hidden;
+  @include media('>tablet', '<desktop') {
+    flex-direction: column-reverse;
+  }
+  @include media('>phone', '<=tablet') {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+  }
 }
 .contentText {
+  z-index: 1;
   width: 100%;
   height: inherit;
   max-width: 515px;
+
+  h2 {
+    margin: 64px 0;
+  }
+
+  @include media('>tablet', '<desktop') {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: unset;
+
+    h2 {
+      margin-top: 6px;
+      margin-bottom: 33px;
+    }
+  }
+  @include media('>phone', '<=tablet') {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: unset;
+
+    h2 {
+      margin-top: 6px;
+      margin-bottom: 40px;
+      font-size: 24px;
+      line-height: 28px;
+    }
+
+    button {
+      width: 100% !important;
+    }
+  }
 }
 .contentParallax {
+  z-index: 0;
   width: 100%;
 }
