--- a/src/pages/Home/components/Parallax/Parallax.module.scss
+++ b/src/pages/Home/components/Parallax/Parallax.module.scss
@@ -1,31 +1,119 @@
+@import '../../../../breakpoints';
+
 .root {
-  // width: 750px;
   height: 680px;
   position: relative;
-  // margin-right: -159px;
+
+  @include media('>tablet', '<desktop') {
+    height: 540px;
+  }
+  @include media('>phone', '<=tablet') {
+    height: 287px;
+  }
 }
 .pokeball {
   position: absolute;
   right: -44%;
   top: 11%;
+
+  @include media('>tablet', '<desktop') {
+    right: -10%;
+    top: 4%;
+    img {
+      width: 80%;
+    }
+  }
+  @include media('>phone', '<=tablet') {
+    right: -6%;
+    top: 2%;
+
+    img {
+      width: 135px;
+    }
+  }
 }
 .pokeballSmall {
   position: absolute;
   left: 0%;
   top: 19%;
+
+  @include media('>tablet', '<desktop') {
+    left: 4%;
+    top: 14%;
+    img {
+      width: 80%;
+    }
+  }
+  @include media('>phone', '<=tablet') {
+    left: 0%;
+    top: 2%;
+
+    img {
+      width: 70px;
+    }
+  }
 }
 .cloudSmall {
   position: absolute;
   left: 0%;
   bottom: 22%;
+
+  @include media('>tablet', '<desktop') {
+    left: 2%;
+    bottom: 22%;
+    img {
+      width: 80%;
+    }
+  }
+
+  @include media('>phone', '<=tablet') {
+    left: 0%;
+    bottom: 32%;
+    img {
+      width: 95px;
+    }
+  }
 }
 .cloud {
   position: absolute;
   right: -11%;
   top: 16%;
+
+  @include media('>tablet', '<desktop') {
+    right: 13%;
+    top: 4%;
+    img {
+      width: 80%;
+    }
+  }
+
+  @include media('>phone', '<=tablet') {
+    right: 21%;
+    top: 5%;
+
+    img {
+      width: 145px;
+    }
+  }
 }
 .pikachu {
   position: absolute;
   right: 4%;
   bottom: -10%;
+
+  @include media('>tablet', '<desktop') {
+    bottom: -11%;
+    right: 28%;
+    img {
+      width: 515px;
+    }
+  }
+
+  @include media('>phone', '<=tablet') {
+    right: 25%;
+    bottom: 0;
+    img {
+      width: 270px;
+    }
+  }
 }
