--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -1,4 +1,5 @@
 @import '../../variables';
+@import '../../breakpoints';
 
 .root {
   display: flex;
@@ -12,12 +13,23 @@
   flex: 1;
   flex-wrap: wrap;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
 }
 .title {
   margin-top: 70px;
   margin-bottom: 35px;
+  letter-spacing: 3px;
+  text-align: center;
+
+  @include media('>tablet', '<desktop') {
+    margin-top: 27px;
+  }
+  @include media('>phone', '<tablet') {
+    margin: 27px 0;
+    font-size: 24px;
+    line-height: 28px;
+  }
 }
 .search {
   padding: 17px 30px;
