--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -7,6 +7,7 @@
   flex: 1;
   background: linear-gradient(180deg, $third 0%, $primary 100%);
   align-items: center;
+  overflow: hidden;
 }
 .contentWrap {
   flex: 1;
@@ -14,7 +15,6 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  // overflow-x: hidden;
   @include media('>tablet', '<desktop') {
     flex-direction: column-reverse;
   }
@@ -62,6 +62,26 @@
     button {
       width: 100% !important;
     }
+  }
+}
+.paragraph {
+  margin: 64px 0;
+  font-family: Karla;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 37px;
+  color: #000;
+
+  @include media('>tablet', '<desktop') {
+    margin-top: 6px;
+    margin-bottom: 33px;
+  }
+  @include media('>phone', '<tablet') {
+    margin-top: 6px;
+    margin-bottom: 40px;
+    font-size: 24px;
+    line-height: 28px;
   }
 }
 .contentParallax {
