--- a/src/pages/Pokedex/components/PokemonCard/PokemonCard.module.scss
+++ b/src/pages/Pokedex/components/PokemonCard/PokemonCard.module.scss
@@ -1,9 +1,10 @@
+@import '../../../../breakpoints';
+
 .root {
   width: 352px;
   height: 136px;
   background: #f6f7f9;
   border-radius: 8px;
-  margin-bottom: 45px;
   cursor: pointer;
   transition: all ease-in-out 0.25s;
   filter: drop-shadow(4px 4px 4px rgba(33, 33, 33, 0.1));
@@ -14,13 +15,16 @@
     transform: scale(1.03);
     transition: all ease-in-out 0.25s;
   }
+
+  @include media('>phone', '<tablet') {
+    width: 336px;
+  }
 }
 .infoWrap {
-  position: absolute;
   z-index: 1;
   width: 100%;
-  top: 0px;
-  left: 25px;
+  height: 100%;
+  padding: 5px 25px;
 }
 .titleName {
   margin-bottom: 12px;
@@ -71,6 +75,7 @@
   background: #73d677;
   box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.18);
   border-radius: 11px;
+  z-index: 1;
 
   font-family: Roboto;
   font-style: normal;
@@ -94,8 +99,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
   height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
 
   img {
     width: 85%;
